--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         </div>
 
         <div class="secImage">
-            <img src="netflix-replica/assets/images/tv.png" alt="tv">
-            <video src="netflix-replica/assets/videos/firstsection" autoplay loop muted></video>
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="tv">
+            <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v" autoplay loop muted></video>
         </div>
     </section>
     <hr>
@@ -62,7 +62,7 @@
     <section class="first second">
 
         <div class="secImage">
-            <img src="netflix-replica/assets/images/strangerthings.jpg" alt="tv">
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg" alt="tv">
 
         </div>
         <div>
@@ -84,8 +84,8 @@
         </div>
 
         <div class="secImage rajmachawal">
-            <img src="netflix-replica/assets/images/rajmachawal.png" alt="tv">
-            <video src="netflix-replica/assets/videos/rajmachawalvid.m4v" autoplay loop muted></video>
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile-in.png" alt="tv">
+            <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v" autoplay loop muted></video>
         </div>
     </section>
     <hr>
@@ -93,7 +93,7 @@
     <section class="first second">
 
         <div class="secImage">
-            <img src="netflix-replica/assets/images/children.png" alt="tv">
+            <img src="https://occ-0-2461-3647.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png?r=54d" alt="tv">
 
         </div>
         <div>
